# nsys-recipe

./: .gitignore  README.md  pyproject.toml
src/nsys_recipe/: __init__.py  __main__.py  clean.py  data_service.py  format.py  install.py  log.py  nsys_constants.py
src/nsys_recipe/recipes/cuda_api_sum/: cuda_api_sum.py  metadata.json  stats.ipynb
src/nsys_recipe/recipes/cuda_api_sync/: analysis.ipynb  cuda_api_sync.py  metadata.json
src/nsys_recipe/recipes/cuda_gpu_kern_hist/: cuda_gpu_kern_hist.py  histogram.ipynb  metadata.json
src/nsys_recipe/recipes/cuda_gpu_kern_pace/: cuda_gpu_kern_pace.py  metadata.json  pace.ipynb
src/nsys_recipe/reports/: _sql.py  _sqlfile.py  _tbl.py  _values.py  cuda_api_gpu_sum.py  cuda_api_sum.py  cuda_api_trace.py  cuda_gpu_kern_gb_sum.py  cuda_gpu_kern_sum.py  cuda_gpu_mem_size_sum.py  cuda_gpu_mem_time_sum.py  cuda_gpu_sum.py  cuda_gpu_trace.py  cuda_kern_exec_sum.py  cuda_kern_exec_trace.py  dx11_pix_sum.py  dx12_gpu_marker_sum.py  dx12_pix_sum.py  mpi_event_sum.py  mpi_event_trace.py  mpi_msg_size_sum.py  network_congestion.py  nvtx_gpu_proj_sum.py  nvtx_gpu_proj_trace.py  nvtx_kern_sum.py  nvtx_pushpop_sum.py  nvtx_pushpop_trace.py  nvtx_startend_sum.py  nvtx_sum.py  nvvideo_api_sum.py  openacc_sum.py  opengl_khr_gpu_range_sum.py  opengl_khr_range_sum.py  openmp_sum.py  osrt_sum.py  syscall_sum.py  um_cpu_page_faults_sum.py  um_sum.py  um_total_sum.py  vulkan_api_sum.py  (+4 more)
src/nsys_recipe/rules/: cuda_api_sync.py  cuda_memcpy_async.py  cuda_memcpy_sync.py  cuda_memset_sync.py  dx12_mem_ops.py  gpu_gaps.py  gpu_time_util.py
(+89 files in other folders)
